abort/src/org/uva/sea/ql/parser/antlr/QLParser.java
// $ANTLR 3.5 /Users/abort/Documents/UvA/Repository/abort/src/org/uva/sea/ql/parser/antlr/QL.g 2013-01-15 11:16:01

package org.uva.sea.ql.parser.antlr;
import org.uva.sea.ql.ast.*;
import org.uva.sea.ql.ast.base.*;
import org.uva.sea.ql.ast.form.*;
import org.uva.sea.ql.ast.types.*;
import org.uva.sea.ql.ast.operators.base.*;
import org.uva.sea.ql.ast.operators.unary.*;
import org.uva.sea.ql.ast.operators.binary.*;
import org.uva.sea.ql.ast.conditionals.*;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

@SuppressWarnings("all")
public class QLParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "BLOCK_END", "BLOCK_START", "Bool", 
		"COMMENT", "ELSE", "EscapedCharacterSequence", "FORM", "IF", "Ident", 
		"Int", "Money", "PARENTHESES_CLOSE", "PARENTHESES_OPEN", "String", "Type", 
		"WS", "'!'", "'!='", "'&&'", "'*'", "'+'", "'-'", "'/'", "':'", "'<'", 
		"'<='", "'=='", "'>'", "'>='", "'||'"
	};
	public static final int EOF=-1;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int BLOCK_END=4;
	public static final int BLOCK_START=5;
	public static final int Bool=6;
	public static final int COMMENT=7;
	public static final int ELSE=8;
	public static final int EscapedCharacterSequence=9;
	public static final int FORM=10;
	public static final int IF=11;
	public static final int Ident=12;
	public static final int Int=13;
	public static final int Money=14;
	public static final int PARENTHESES_CLOSE=15;
	public static final int PARENTHESES_OPEN=16;
	public static final int String=17;
	public static final int Type=18;
	public static final int WS=19;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public QLParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public QLParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
		this.state.ruleMemo = new HashMap[40+1];


	}

	@Override public String[] getTokenNames() { return QLParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/Users/abort/Documents/UvA/Repository/abort/src/org/uva/sea/ql/parser/antlr/QL.g"; }





	// $ANTLR start "form"
	// /Users/abort/Documents/UvA/Repository/abort/src/org/uva/sea/ql/parser/antlr/QL.g:29:1: form returns [Form result] : FORM Ident BLOCK_START e= elements BLOCK_END ;
	public final Form form() throws RecognitionException {
		Form result = null;

		int form_StartIndex = input.index();

		List<Element> e =null;

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return result; }

			// /Users/abort/Documents/UvA/Repository/abort/src/org/uva/sea/ql/parser/antlr/QL.g:30:3: ( FORM Ident BLOCK_START e= elements BLOCK_END )
			// /Users/abort/Documents/UvA/Repository/abort/src/org/uva/sea/ql/parser/antlr/QL.g:30:5: FORM Ident BLOCK_START e= elements BLOCK_END
			{
			match(input,FORM,FOLLOW_FORM_in_form65); if (state.failed) return result;
			match(input,Ident,FOLLOW_Ident_in_form67); if (state.failed) return result;
			match(input,BLOCK_START,FOLLOW_BLOCK_START_in_form69); if (state.failed) return result;
			pushFollow(FOLLOW_elements_in_form73);
			e=elements();
			state._fsp--;
			if (state.failed) return result;
			match(input,BLOCK_END,FOLLOW_BLOCK_END_in_form75); if (state.failed) return result;
			if ( state.backtracking==0 ) {    
			    result = new Form(e);
			  }
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 1, form_StartIndex); }

		}
		return result;
	}
	// $ANTLR end "form"



	// $ANTLR start "elements"
	// /Users/abort/Documents/UvA/Repository/abort/src/org/uva/sea/ql/parser/antlr/QL.g:34:1: elements returns [List<Element> results] : ( element )+ ;
	public final List<Element> elements() throws RecognitionException {
		List<Element> results = null;

		int elements_StartIndex = input.index();

		Element element1 =null;

		 results = new ArrayList<Element>(); 
		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return results; }

			// /Users/abort/Documents/UvA/Repository/abort/src/org/uva/sea/ql/parser/antlr/QL.g:36:3: ( ( element )+ )
			// /Users/abort/Documents/UvA/Repository/abort/src/org/uva/sea/ql/parser/antlr/QL.g:36:5: ( element )+
			{
			// /Users/abort/Documents/UvA/Repository/abort/src/org/uva/sea/ql/parser/antlr/QL.g:36:5: ( element )+
			int cnt1=0;
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( ((LA1_0 >= IF && LA1_0 <= Ident)) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// /Users/abort/Documents/UvA/Repository/abort/src/org/uva/sea/ql/parser/antlr/QL.g:36:6: element
					{
					pushFollow(FOLLOW_element_in_elements99);
					element1=element();
					state._fsp--;
					if (state.failed) return results;
					if ( state.backtracking==0 ) { results.add(element1); }
					}
					break;

				default :
					if ( cnt1 >= 1 ) break loop1;
					if (state.backtracking>0) {state.failed=true; return results;}
					EarlyExitException eee = new EarlyExitException(1, input);
					throw eee;
				}
				cnt1++;
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 2, elements_StartIndex); }

		}
		return results;
	}
	// $ANTLR end "elements"



	// $ANTLR start "element"
	// /Users/abort/Documents/UvA/Repository/abort/src/org/uva/sea/ql/parser/antlr/QL.g:38:1: element returns [Element result] : ( question | computation | ifExpression );
	public final Element element() throws RecognitionException {
		Element result = null;

		int element_StartIndex = input.index();

		Question question2 =null;
		Computation computation3 =null;
		IfStatement ifExpression4 =null;

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return result; }

			// /Users/abort/Documents/UvA/Repository/abort/src/org/uva/sea/ql/parser/antlr/QL.g:39:5: ( question | computation | ifExpression )
			int alt2=3;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==Ident) ) {
				int LA2_1 = input.LA(2);
				if ( (LA2_1==27) ) {
					int LA2_3 = input.LA(3);
					if ( (LA2_3==String) ) {
						int LA2_4 = input.LA(4);
						if ( (LA2_4==Type) ) {
							int LA2_5 = input.LA(5);
							if ( (LA2_5==EOF||LA2_5==BLOCK_END||(LA2_5 >= IF && LA2_5 <= Ident)) ) {
								alt2=1;
							}
							else if ( (LA2_5==PARENTHESES_OPEN) ) {
								alt2=2;
							}

							else {
								if (state.backtracking>0) {state.failed=true; return result;}
								int nvaeMark = input.mark();
								try {
									for (int nvaeConsume = 0; nvaeConsume < 5 - 1; nvaeConsume++) {
										input.consume();
									}
									NoViableAltException nvae =
										new NoViableAltException("", 2, 5, input);
									throw nvae;
								} finally {
									input.rewind(nvaeMark);
								}
							}

						}

						else {
							if (state.backtracking>0) {state.failed=true; return result;}
							int nvaeMark = input.mark();
							try {
								for (int nvaeConsume = 0; nvaeConsume < 4 - 1; nvaeConsume++) {
									input.consume();
								}
								NoViableAltException nvae =
									new NoViableAltException("", 2, 4, input);
								throw nvae;
							} finally {
								input.rewind(nvaeMark);
							}
						}

					}

					else {
						if (state.backtracking>0) {state.failed=true; return result;}
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 2, 3, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					if (state.backtracking>0) {state.failed=true; return result;}
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 2, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

			}
			else if ( (LA2_0==IF) ) {
				alt2=3;
			}

			else {
				if (state.backtracking>0) {state.failed=true; return result;}
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}

			switch (alt2) {
				case 1 :
					// /Users/abort/Documents/UvA/Repository/abort/src/org/uva/sea/ql/parser/antlr/QL.g:39:7: question
					{
					pushFollow(FOLLOW_question_in_element119);
					question2=question();
					state._fsp--;
					if (state.failed) return result;
					if ( state.backtracking==0 ) { result = question2; }
					}
					break;
				case 2 :
					// /Users/abort/Documents/UvA/Repository/abort/src/org/uva/sea/ql/parser/antlr/QL.g:40:7: computation
					{
					pushFollow(FOLLOW_computation_in_element129);
					computation3=computation();
					state._fsp--;
					if (state.failed) return result;
					if ( state.backtracking==0 ) { result = computation3; }
					}
					break;
				case 3 :
					// /Users/abort/Documents/UvA/Repository/abort/src/org/uva/sea/ql/parser/antlr/QL.g:41:7: ifExpression
					{
					pushFollow(FOLLOW_ifExpression_in_element139);
					ifExpression4=ifExpression();
					state._fsp--;
					if (state.failed) return result;
					if ( state.backtracking==0 ) { result = ifExpression4; }
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 3, element_StartIndex); }

		}
		return result;
	}
	// $ANTLR end "element"



	// $ANTLR start "ifExpression"
	// /Users/abort/Documents/UvA/Repository/abort/src/org/uva/sea/ql/parser/antlr/QL.g:43:1: ifExpression returns [IfStatement result] : ( IF PARENTHESES_OPEN condition= orExpression PARENTHESES_CLOSE BLOCK_START successStatements= elements BLOCK_END ELSE BLOCK_START elseStatements= elements BLOCK_END | IF PARENTHESES_OPEN condition= orExpression PARENTHESES_CLOSE BLOCK_START successStatements= elements BLOCK_END );
	public final IfStatement ifExpression() throws RecognitionException {
		IfStatement result = null;

		int ifExpression_StartIndex = input.index();

		Node condition =null;
		List<Element> successStatements =null;
		List<Element> elseStatements =null;

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 4) ) { return result; }

			// /Users/abort/Documents/UvA/Repository/abort/src/org/uva/sea/ql/parser/antlr/QL.g:44:5: ( IF PARENTHESES_OPEN condition= orExpression PARENTHESES_CLOSE BLOCK_START successStatements= elements BLOCK_END ELSE BLOCK_START elseStatements= elements BLOCK_END | IF PARENTHESES_OPEN condition= orExpression PARENTHESES_CLOSE BLOCK_START successStatements= elements BLOCK_END )
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==IF) ) {
				int LA3_1 = input.LA(2);
				if ( (synpred4_QL()) ) {
					alt3=1;
				}
				else if ( (true) ) {
					alt3=2;
				}

			}

			else {
				if (state.backtracking>0) {state.failed=true; return result;}
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}

			switch (alt3) {
				case 1 :
					// /Users/abort/Documents/UvA/Repository/abort/src/org/uva/sea/ql/parser/antlr/QL.g:44:7: IF PARENTHESES_OPEN condition= orExpression PARENTHESES_CLOSE BLOCK_START successStatements= elements BLOCK_END ELSE BLOCK_START elseStatements= elements BLOCK_END
					{
					match(input,IF,FOLLOW_IF_in_ifExpression157); if (state.failed) return result;
					match(input,PARENTHESES_OPEN,FOLLOW_PARENTHESES_OPEN_in_ifExpression159); if (state.failed) return result;
					pushFollow(FOLLOW_orExpression_in_ifExpression163);
					condition=orExpression();
					state._fsp--;
					if (state.failed) return result;
					match(input,PARENTHESES_CLOSE,FOLLOW_PARENTHESES_CLOSE_in_ifExpression165); if (state.failed) return result;
					match(input,BLOCK_START,FOLLOW_BLOCK_START_in_ifExpression167); if (state.failed) return result;
					pushFollow(FOLLOW_elements_in_ifExpression171);
					successStatements=elements();
					state._fsp--;
					if (state.failed) return result;
					match(input,BLOCK_END,FOLLOW_BLOCK_END_in_ifExpression173); if (state.failed) return result;
					match(input,ELSE,FOLLOW_ELSE_in_ifExpression175); if (state.failed) return result;
					match(input,BLOCK_START,FOLLOW_BLOCK_START_in_ifExpression177); if (state.failed) return result;
					pushFollow(FOLLOW_elements_in_ifExpression181);
					elseStatements=elements();
					state._fsp--;
					if (state.failed) return result;
					match(input,BLOCK_END,FOLLOW_BLOCK_END_in_ifExpression183); if (state.failed) return result;
					if ( state.backtracking==0 ) {
					      result = new IfThenElse(condition, successStatements, elseStatements);
					    }
					}
					break;
				case 2 :
					// /Users/abort/Documents/UvA/Repository/abort/src/org/uva/sea/ql/parser/antlr/QL.g:48:7: IF PARENTHESES_OPEN condition= orExpression PARENTHESES_CLOSE BLOCK_START successStatements= elements BLOCK_END
					{
					match(input,IF,FOLLOW_IF_in_ifExpression197); if (state.failed) return result;
					match(input,PARENTHESES_OPEN,FOLLOW_PARENTHESES_OPEN_in_ifExpression199); if (state.failed) return result;
					pushFollow(FOLLOW_orExpression_in_ifExpression203);
					condition=orExpression();
					state._fsp--;
					if (state.failed) return result;
					match(input,PARENTHESES_CLOSE,FOLLOW_PARENTHESES_CLOSE_in_ifExpression205); if (state.failed) return result;
					match(input,BLOCK_START,FOLLOW_BLOCK_START_in_ifExpression207); if (state.failed) return result;
					pushFollow(FOLLOW_elements_in_ifExpression211);
					successStatements=elements();
					state._fsp--;
					if (state.failed) return result;
					match(input,BLOCK_END,FOLLOW_BLOCK_END_in_ifExpression213); if (state.failed) return result;
					if ( state.backtracking==0 ) {
					      result = new IfThen(condition, successStatements);
					    }
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 4, ifExpression_StartIndex); }

		}
		return result;
	}
	// $ANTLR end "ifExpression"



	// $ANTLR start "questions"
	// /Users/abort/Documents/UvA/Repository/abort/src/org/uva/sea/ql/parser/antlr/QL.g:53:1: questions returns [List<Question> results] : ( question )+ ;
	public final List<Question> questions() throws RecognitionException {
		List<Question> results = null;

		int questions_StartIndex = input.index();

		Question question5 =null;

		 results = new ArrayList<Question>(); 
		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 5) ) { return results; }

			// /Users/abort/Documents/UvA/Repository/abort/src/org/uva/sea/ql/parser/antlr/QL.g:55:5: ( ( question )+ )
			// /Users/abort/Documents/UvA/Repository/abort/src/org/uva/sea/ql/parser/antlr/QL.g:55:7: ( question )+
			{
			// /Users/abort/Documents/UvA/Repository/abort/src/org/uva/sea/ql/parser/antlr/QL.g:55:7: ( question )+
			int cnt4=0;
			loop4:
			while (true) {
				int alt4=2;
				int LA4_0 = input.LA(1);
				if ( (LA4_0==Ident) ) {
					alt4=1;
				}

				switch (alt4) {
				case 1 :
					// /Users/abort/Documents/UvA/Repository/abort/src/org/uva/sea/ql/parser/antlr/QL.g:55:8: question
					{
					pushFollow(FOLLOW_question_in_questions247);
					question5=question();
					state._fsp--;
					if (state.failed) return results;
					if ( state.backtracking==0 ) { results.add(question5); }
					}
					break;

				default :
					if ( cnt4 >= 1 ) break loop4;
					if (state.backtracking>0) {state.failed=true; return results;}
					EarlyExitException eee = new EarlyExitException(4, input);
					throw eee;
				}
				cnt4++;
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 5, questions_StartIndex); }

		}
		return results;
	}
	// $ANTLR end "questions"



	// $ANTLR start "computation"
	// /Users/abort/Documents/UvA/Repository/abort/src/org/uva/sea/ql/parser/antlr/QL.g:57:1: computation returns [Computation result] : label= Ident ':' String parameter= dataType PARENTHESES_OPEN operation= orExpression PARENTHESES_CLOSE ;
	public final Computation computation() throws RecognitionException {
		Computation result = null;

		int computation_StartIndex = input.index();

		Token label=null;
		Token String6=null;
		DataType parameter =null;
		Node operation =null;

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 6) ) { return result; }

			// /Users/abort/Documents/UvA/Repository/abort/src/org/uva/sea/ql/parser/antlr/QL.g:58:3: (label= Ident ':' String parameter= dataType PARENTHESES_OPEN operation= orExpression PARENTHESES_CLOSE )
			// /Users/abort/Documents/UvA/Repository/abort/src/org/uva/sea/ql/parser/antlr/QL.g:58:5: label= Ident ':' String parameter= dataType PARENTHESES_OPEN operation= orExpression PARENTHESES_CLOSE
			{
			label=(Token)match(input,Ident,FOLLOW_Ident_in_computation267); if (state.failed) return result;
			match(input,27,FOLLOW_27_in_computation269); if (state.failed) return result;
			String6=(Token)match(input,String,FOLLOW_String_in_computation271); if (state.failed) return result;
			pushFollow(FOLLOW_dataType_in_computation275);
			parameter=dataType();
			state._fsp--;
			if (state.failed) return result;
			match(input,PARENTHESES_OPEN,FOLLOW_PARENTHESES_OPEN_in_computation277); if (state.failed) return result;
			pushFollow(FOLLOW_orExpression_in_computation281);
			operation=orExpression();
			state._fsp--;
			if (state.failed) return result;
			match(input,PARENTHESES_CLOSE,FOLLOW_PARENTHESES_CLOSE_in_computation283); if (state.failed) return result;
			if ( state.backtracking==0 ) {
			    result = new Computation((label!=null?label.getText():null), (String6!=null?String6.getText():null), parameter, operation);
			  }
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 6, computation_StartIndex); }

		}
		return result;
	}
	// $ANTLR end "computation"



	// $ANTLR start "question"
	// /Users/abort/Documents/UvA/Repository/abort/src/org/uva/sea/ql/parser/antlr/QL.g:62:1: question returns [Question result] : label= Ident ':' String parameter= dataType ;
	public final Question question() throws RecognitionException {
		Question result = null;

		int question_StartIndex = input.index();

		Token label=null;
		Token String7=null;
		DataType parameter =null;

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 7) ) { return result; }

			// /Users/abort/Documents/UvA/Repository/abort/src/org/uva/sea/ql/parser/antlr/QL.g:63:3: (label= Ident ':' String parameter= dataType )
			// /Users/abort/Documents/UvA/Repository/abort/src/org/uva/sea/ql/parser/antlr/QL.g:63:5: label= Ident ':' String parameter= dataType
			{
			label=(Token)match(input,Ident,FOLLOW_Ident_in_question301); if (state.failed) return result;
			match(input,27,FOLLOW_27_in_question303); if (state.failed) return result;
			String7=(Token)match(input,String,FOLLOW_String_in_question305); if (state.failed) return result;
			pushFollow(FOLLOW_dataType_in_question309);
			parameter=dataType();
			state._fsp--;
			if (state.failed) return result;
			if ( state.backtracking==0 ) {
			    result = new Question((label!=null?label.getText():null), (String7!=null?String7.getText():null), parameter);
			  }
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 7, question_StartIndex); }

		}
		return result;
	}
	// $ANTLR end "question"



	// $ANTLR start "dataType"
	// /Users/abort/Documents/UvA/Repository/abort/src/org/uva/sea/ql/parser/antlr/QL.g:67:1: dataType returns [DataType result] : Type ;
	public final DataType dataType() throws RecognitionException {
		DataType result = null;

		int dataType_StartIndex = input.index();

		Token Type8=null;

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 8) ) { return result; }

			// /Users/abort/Documents/UvA/Repository/abort/src/org/uva/sea/ql/parser/antlr/QL.g:68:2: ( Type )
			// /Users/abort/Documents/UvA/Repository/abort/src/org/uva/sea/ql/parser/antlr/QL.g:68:4: Type
			{
			Type8=(Token)match(input,Type,FOLLOW_Type_in_dataType326); if (state.failed) return result;
			if ( state.backtracking==0 ) {
			    if ((Type8!=null?Type8.getText():null).equals("string")) result = new StringLiteral();
			    else if ((Type8!=null?Type8.getText():null).equals("integer")) result = new Int();
			    else if ((Type8!=null?Type8.getText():null).equals("money")) result = new Money();
			    else if ((Type8!=null?Type8.getText():null).equals("boolean")) result = new Bool();
			 }
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 8, dataType_StartIndex); }

		}
		return result;
	}
	// $ANTLR end "dataType"



	// $ANTLR start "primary"
	// /Users/abort/Documents/UvA/Repository/abort/src/org/uva/sea/ql/parser/antlr/QL.g:75:1: primary returns [Node result] : ( Int | Money | Bool | Ident | String | PARENTHESES_OPEN orExpression PARENTHESES_CLOSE );
	public final Node primary() throws RecognitionException {
		Node result = null;

		int primary_StartIndex = input.index();

		Token Int9=null;
		Token Money10=null;
		Token Bool11=null;
		Token Ident12=null;
		Token String13=null;
		Node orExpression14 =null;

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 9) ) { return result; }

			// /Users/abort/Documents/UvA/Repository/abort/src/org/uva/sea/ql/parser/antlr/QL.g:76:3: ( Int | Money | Bool | Ident | String | PARENTHESES_OPEN orExpression PARENTHESES_CLOSE )
			int alt5=6;
			switch ( input.LA(1) ) {
			case Int:
				{
				alt5=1;
				}
				break;
			case Money:
				{
				alt5=2;
				}
				break;
			case Bool:
				{
				alt5=3;
				}
				break;
			case Ident:
				{
				alt5=4;
				}
				break;
			case String:
				{
				alt5=5;
				}
				break;
			case PARENTHESES_OPEN:
				{
				alt5=6;
				}
				break;
			default:
				if (state.backtracking>0) {state.failed=true; return result;}
				NoViableAltException nvae =
					new NoViableAltException("", 5, 0, input);
				throw nvae;
			}
			switch (alt5) {
				case 1 :
					// /Users/abort/Documents/UvA/Repository/abort/src/org/uva/sea/ql/parser/antlr/QL.g:76:5: Int
					{
					Int9=(Token)match(input,Int,FOLLOW_Int_in_primary343); if (state.failed) return result;
					if ( state.backtracking==0 ) { result = new Int(Integer.parseInt((Int9!=null?Int9.getText():null))); }
					}
					break;
				case 2 :
					// /Users/abort/Documents/UvA/Repository/abort/src/org/uva/sea/ql/parser/antlr/QL.g:77:5: Money
					{
					Money10=(Token)match(input,Money,FOLLOW_Money_in_primary353); if (state.failed) return result;
					if ( state.backtracking==0 ) { result = new Money((Money10!=null?Money10.getText():null)); }
					}
					break;
				case 3 :
					// /Users/abort/Documents/UvA/Repository/abort/src/org/uva/sea/ql/parser/antlr/QL.g:78:5: Bool
					{
					Bool11=(Token)match(input,Bool,FOLLOW_Bool_in_primary361); if (state.failed) return result;
					if ( state.backtracking==0 ) { result = new Bool(Boolean.parseBoolean((Bool11!=null?Bool11.getText():null))); }
					}
					break;
				case 4 :
					// /Users/abort/Documents/UvA/Repository/abort/src/org/uva/sea/ql/parser/antlr/QL.g:79:5: Ident
					{
					Ident12=(Token)match(input,Ident,FOLLOW_Ident_in_primary369); if (state.failed) return result;
					if ( state.backtracking==0 ) { result = new Ident((Ident12!=null?Ident12.getText():null)); }
					}
					break;
				case 5 :
					// /Users/abort/Documents/UvA/Repository/abort/src/org/uva/sea/ql/parser/antlr/QL.g:80:5: String
					{
					String13=(Token)match(input,String,FOLLOW_String_in_primary377); if (state.failed) return result;
					if ( state.backtracking==0 ) { result = new StringLiteral((String13!=null?String13.getText():null).substring(1, (String13!=null?String13.getText():null).length() - 1)); }
					}
					break;
				case 6 :
					// /Users/abort/Documents/UvA/Repository/abort/src/org/uva/sea/ql/parser/antlr/QL.g:81:5: PARENTHESES_OPEN orExpression PARENTHESES_CLOSE
					{
					match(input,PARENTHESES_OPEN,FOLLOW_PARENTHESES_OPEN_in_primary385); if (state.failed) return result;
					pushFollow(FOLLOW_orExpression_in_primary387);
					orExpression14=orExpression();
					state._fsp--;
					if (state.failed) return result;
					match(input,PARENTHESES_CLOSE,FOLLOW_PARENTHESES_CLOSE_in_primary389); if (state.failed) return result;
					if ( state.backtracking==0 ) { result = orExpression14; }
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 9, primary_StartIndex); }

		}
		return result;
	}
	// $ANTLR end "primary"



	// $ANTLR start "unExpression"
	// /Users/abort/Documents/UvA/Repository/abort/src/org/uva/sea/ql/parser/antlr/QL.g:83:1: unExpression returns [Node result] : ( '+' x= unExpression | '-' x= unExpression | '!' x= unExpression |x= primary );
	public final Node unExpression() throws RecognitionException {
		Node result = null;

		int unExpression_StartIndex = input.index();

		Node x =null;
